backend/microservice/kuberneties/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-management-service
spec:
  selector:
    app: admin-app
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8080
  type: LoadBalancer
