backend/microservice/kuberneties/sv2.yaml
apiVersion: v1
kind: Service
metadata:
  name: sv
spec:
  selector:
    app: nginx-app
  ports:
    - protocol: TCP
      port: 1025
      targetPort: 1024
  type: ClusterIP
